force-app/main/default/objects/Beat_Assignment__c/Beat_Assignment__c.object-meta.xml
<CustomObject>
    <label>Beat Assignment</label>
    <nameField>
        <displayFormat>ASGN-{0000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beat Assignment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>