force-app/main/default/objects/Beat_Assignment__c/fields/Beat__c.field-meta.xml
<CustomField>
    <fullName>Beat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beat</label>
    <referenceTo>Child_beat__c</referenceTo>
    <relationshipLabel>Beat Assignment</relationshipLabel>
    <relationshipName>Beat_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>